# fmath

./: CMakeLists.txt  README.md
include/fmath/: box.h  color.h  common.h  compile_config.h  constants.h  fmath.h  functions.h  line.h  math_common_functions.h  matrix.h  normal.h  plane.h  point.h  quaternion.h  random.h  ray.h  scalar.h  sphere.h  swizzle.h  traits.h  transform.h  triangle.h  vector.h
include/fmath/internal/: color_base.h  color_storage.h  interfaces.h  math_common_functions_impl.h  matrix_base.h  matrix_storage.h  matrix_traits.h  vector_base.h  vector_storage.h  vector_traits.h
test/: CMakeLists.txt
